# pyclingo

./: .gitignore  README.md  pyproject.toml
pyclingo/: api.py  core.py  deserialize.py  exceptions.py  generate.py  utils.py
tests/: test_api.py  test_deserialize.py  test_generate.py
