[tool.poetry]
name = "pyclingo"
version = "0.3.0"
description = ""
authors = ["Matthias Ossadnik <ossadnik.matthias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
clingo = ">=5.8,<6.0"
attrs = "^25.3.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
